# warbling-waffle

./: .gitignore  Cargo.toml  justfile  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
src/: main.rs
src/controller/: api_router.rs  app_state.rs  assets_dir.rs  mod.rs  web_router.rs
src/view/: mod.rs
templates/: base.html  goodbye.html  hello.html  todo-form.html
