[package]
name = "warbling-waffle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "WarblingWaffle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
